[package]
name = "bljeasy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4"
clap = { version = "4.0.19", features = ["derive"] }
ssh-rs = "0.2.2"
tokio = "1.21"
log = "0.4"
env_logger = "0.9"
actix-web-actors = "4"