[package]
name = "bljeasy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
ssh-rs = "0.2.2"
tokio = {version = "1.21",features = ["full"]}
log = "0.4"
env_logger = "0.9"
axum = {version =  "0.6.0-rc.2", features = ["ws","headers"]}